# database-api-gateway

./: .env.docker.example  .env.dokploy.example  .env.example  .gitignore  CLAUDE.md  README_MIGRATIONS.md  docker-compose.dokploy.yml  docker-compose.yml  main.py  pyproject.toml  readme.md
.claude/agents/: frontend-planning.md  (+6 more)
alembic/: env.py
database/: generate_schema.py
docs/: api-reference-v2.md  api-reference-v3.md  api-reference-v4.md  api-reference.md  docker-deployment.md  dokploy-deployment.md
scripts/: verify_clone_e2e.py  verify_migrations_e2e.py  verify_schema_diff_e2e.py
tests/: conftest.py  test_api_auth.py  test_api_database_clones.py  test_api_database_models.py  test_api_engine_users.py  test_api_managed_databases.py  test_api_migrations_apply_flow.py  test_api_migrations_rollback_flow.py  test_api_migrations_stamp_and_edit.py  test_api_model_migrations.py  test_api_permission_profiles.py  test_api_plan09_adopt_snapshot.py  test_api_schema_comparisons.py  test_api_server_users.py  test_api_servers.py  test_api_snapshot_selective.py  test_clone_dependencies.py  test_crypto.py  test_crypto_rotation.py  test_data_copy.py  test_dict_utils.py  test_exception_handler_logging.py  test_grant_guards.py  test_grant_object.py  test_grants_integration.py  test_hardening.py  test_health.py  test_identifiers.py  test_introspection.py  test_migration_integrity.py  test_migration_runner.py  test_privilege_catalog.py  test_privileges.py  test_remote_engine.py  test_schema_diff.py  test_security.py  test_snapshot_layout.py  test_sql_dialect.py  test_ssrf_guard.py
(+145 files in other folders)
