[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=43.0.0",
    "detect-secrets>=1.5.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.123.4",
    "itsdangerous>=2.2.0",
    "psycopg[binary]>=3.2",
    "pymysql>=1.1.2",
    "redis>=8.0.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.46",
    "sqlglot>=30.11.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
